fixed spacing and minor fixes

--- a/intro-section-with-dropdown-navigation/src/css/input.css
+++ b/intro-section-with-dropdown-navigation/src/css/input.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;600;700&display=swap');
 
 .attribution {
   font-size: 11px;
@@ -11,7 +11,7 @@
   margin: 0 auto;
   right: 0;
   left: 0;
-  bottom: 5px;
+  /* bottom: 0; */
   width: 100%;
 }
 .attribution a {
